feat: add some class notes and support android platform.

--- a/Menu/02.Edit material/02.编辑素材 (Edit material).md
+++ b/Menu/02.Edit material/02.编辑素材 (Edit material).md
@@ -1,5 +1,5 @@
 # 简要
-- 这节课最重要的是素材的像素分割, 里面有很多小细节, 我决定用图片的形式表现出来, 达到快速浏览记忆的作用.
+- 02节课最重要的是素材的像素分割, 里面有很多小细节, 我决定用图片的形式表现出来, 达到快速浏览记忆的作用.
 - 请跟着图片以及图片上的箭头步骤走.
 
 # 方法步骤
