feat: add 17 13 class note.

--- a/Menu/17.ClassInheritanceMakesMoreEnemies/17.ClassInheritanceMakesMoreEnemies.md
+++ b/Menu/17.ClassInheritanceMakesMoreEnemies/17.ClassInheritanceMakesMoreEnemies.md
@@ -1,47 +1,47 @@
 # 简要
-- *12课是 **UI入门 + UI与Scripts的link**, 我决定用 *图片 + code* 的形式表现出来, 达到快速浏览记忆的作用.*
-- *请跟着图片以及图片上的箭头步骤走.*
+- *12课是 **Eagle创建 + Enemy的死亡 + C#继承方面的知识点**, 我决定用 *图片 + code* 的形式表现出来, 达到快速浏览记忆的作用.*  
+- *请跟着图片以及图片上的箭头步骤走.*  
+- *你可能需要提前了解 : [敌人的创建](https://github.com/Sugar0612/Fox/blob/main/Menu/13.Enemy/13.Enemy.md), [动画创建](https://github.com/Sugar0612/Fox/blob/main/Menu/06.AnimationEffects/06.AnimationEffects.md), [动画事件](https://github.com/Sugar0612/Fox/blob/main/Menu/16.AnimationEvents/16.AnimationEvents.md).*  
 
 # 方法步骤  
 
-- *第一步 : 创建UI控件.*  
-<img src = "https://raw.githubusercontent.com/Sugar0612/Fox/main/Menu/12.GettingStartedWithUI/image/12_1.jpg" width="500" alt="">  
+- *关于Eagle的创建.*
+  - *值得注意的是, 如果不希望Eagle在x轴有移动, 那么请像图片一样给'Constraints x'打勾.*  
+  <img src = "https://raw.githubusercontent.com/Sugar0612/Fox/main/Menu/17.ClassInheritanceMakesMoreEnemies/image/17_1.png" width="400" alt="">  
 
-- *第二步 : UI控件显示的位置.*  
-<img src = "https://raw.githubusercontent.com/Sugar0612/Fox/main/Menu/12.GettingStartedWithUI/image/12_2.png" width="350" alt="">  
-
-- *第三步 : 如图 : 12课所用到的Text控件的参数和功能.*  
-<img src = "https://raw.githubusercontent.com/Sugar0612/Fox/main/Menu/12.GettingStartedWithUI/image/12_3.png" width="500" alt="">  
+- *Enemy的死亡.*
+  - *创建好了死亡动画之后, 可能不知道Animtor窗口该如何设置(因为死亡动画可以在任何时候触发).*  
+  <img src = "https://raw.githubusercontent.com/Sugar0612/Fox/main/Menu/17.ClassInheritanceMakesMoreEnemies/image/17_2.jpg" width="500" alt="">  
 
 # 代码  
-*以上我们在Unity Editor中添加了UI控件, 要实现触碰Cherry改变Text, 需要代码层做些事请.*  
+*Enemy死亡原理: 当Player的coll与Enemy触碰的时候(通过tag检测), 如果Player是在Falling阶段, 可以销毁(其实可以写的更加精细), 然后在Enemy生成gameobject实例播放死亡动画, 当死亡动画结束后开启动画事件销毁该角色.*  
+
 ```cs
 // In PlayerControll.cs..
 
-public Text cherry_text;
-private int cherry_count = 0;
-
-// 在碰到Cherry后, 销毁Cherry 调用 UpdateCherry()..
-public void UpdateCherry()
+private void OnCollisionEnter2D(Collision2D collision)
 {
-    cherry_count++;
-    cherry_text.text = cherry_count.ToString();
-}
-
-// In PlayerControll.cs File, OnTriggerEnter2D(Collider2D collision) Function..
-if (collision.tag == "collectible")
-{
-    Collectibles cherry = collision.gameObject.GetComponent<Collectibles>();
-    cherry.Pick(); //触发Cherry动画..
-    SoundManager.Get().Pick();
+    if (collision.gameObject.tag == "Enemy") {
+        Enemy enemy = collision.gameObject.GetComponent<Enemy>(); //这里已经开始继承获取了...继承内容下面有.
+        if (anim.GetBool("is_falling"))
+        { 
+            rb.velocity = new Vector2(rb.velocity.x, jumpForce * Time.deltaTime);
+            anim.SetBool("is_jumping", true);
+            SoundManager.Get().EnemDeath(); //这里已经实现了Sound的集成了..
+            enemy.Death();
+        }
+    } 
 }
 ```  
-*触发动画结尾添加[动画事件](https://github.com/Sugar0612/Fox/blob/main/Menu/17.ClassInheritanceMakesMoreEnemies/17.ClassInheritanceMakesMoreEnemies.md)自动调用函数 Destroy().*  
+*因为Frog和Eagle都是同样的死亡机制, 那么我们可以通过继承的方式来让代码更加的整洁.*  
+*继承的原理: 就是创建一个Father类, 这个类中的成员Funcation是在子类中通用的, 那么当子类继承Father类的时候就可以调用Father类中的东西实现功能.*  
+*那么在这个Frog和Eagle中死亡动画和死亡的处理方式都是一样的, 我们现在来继承[Enemy](https://github.com/Sugar0612/Fox/blob/main/Assets/Scripts/Enemy.cs). ps: 想了想就是全部的Enemy代码,那么直接看源码中写注释吧.*  
 ```cs
-// In Collectibles.cs..
-protected void Destroy()
-{
-    FindObjectOfType<PlayerControlloer>().UpdateCherry(); // count + 1 并且改变Text..
-    Destroy(gameObject);
-}
+// In Enemy_Eagle.cs file..
+public class Enemy_Eagle : Enemy
+
+// In Enemy_Frog.cs file..
+public class Enemy_Frog : Enemy
+
+//In PlayerController.cs file..
 ```
